[package]
name = "rock"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.89"
reqwest = "0.12.8"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
tokio = { version = "1.40.0", features = ["full"] }
native-tls = "0.2"
tokio-native-tls = "0.3"
log = "0.4.22"
clap = { version = "4.5.20", features = ["derive"] }
regex = "1.11.1"
